--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,13 +1,30 @@
-html,body,#app{
-    height: 100%;
-    margin: 0;
-    padding: 0;
+html,
+body,
+#app {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .el-submenu_title,
-.el-menu-item{
-    font-size: 13px;
+.el-menu-item {
+  font-size: 13px;
 }
-i.iconfont{
-    margin-right: 10px;
+i.iconfont {
+  margin-right: 10px;
+}
+
+.box-card {
+  margin-top: 15px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15) !important;
+}
+
+.el-table {
+  margin-top: 15px;
+  font-size: 12px;
+}
+
+.el-pagination{
+  margin-top: 15px;
+  font-size: 12px;
 }
